@@ -493,7 +493,11 @@ debug = 1
 asterisk_version = 1_2
 
 ; Manage the answer on the call
-answer_call = yes
+answer_call = YES
+
+; Play audio - this will disable all stream file but not the Get Data 
+; for wholesale ensure that the authentication works and than number_try = 1
+play_audio = YES
 
 ; play the goodbye message when the user has finished.
 say_goodbye = NO
